--- a/dev_layer/config.yml
+++ b/dev_layer/config.yml
@@ -1,24 +1,27 @@
+# 🎯 RANDOM FOREST EXPERIMENTS CONFIGURATION
+# Multiple hyperparameter configurations for model training
+# File: experiments.yml (separate from pipeline_config.yml)
+
 experiments:
-  # =====================================================================
+  
   # BASELINE - Balanced Configuration
-  # =====================================================================
+ 
   - name: "rf_baseline_balanced"
     params:
       n_estimators: 200
       max_depth: 15
       min_samples_split: 20
       min_samples_leaf: 10
-      max_features: "sqrt"           # √n_features for classification
+      max_features: "sqrt"
       bootstrap: true
       max_samples: 0.8
-      class_weight: "balanced"       # Handle imbalanced classes
+      class_weight: "balanced"
       criterion: "gini"
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+  
   # HIGH RECALL - Minimize False Negatives (Critical for Credit Risk)
-  # =====================================================================
+ 
   - name: "rf_high_recall"
     params:
       n_estimators: 300
@@ -28,66 +31,62 @@ experiments:
       max_features: "sqrt"
       bootstrap: true
       max_samples: 0.85
-      class_weight: "balanced_subsample"  # Dynamic balancing per tree
+      class_weight: "balanced_subsample"
       criterion: "gini"
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+ 
   # HIGH PRECISION - Minimize False Positives
-  # =====================================================================
+
   - name: "rf_high_precision"
     params:
       n_estimators: 250
       max_depth: 12
       min_samples_split: 30
       min_samples_leaf: 15
-      max_features: 0.4              # Use 40% features (more conservative)
+      max_features: 0.4
       bootstrap: true
       max_samples: 0.75
       class_weight: "balanced"
       criterion: "gini"
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+ 
   # DEEP ENSEMBLE - Complex Patterns
-  # =====================================================================
+
   - name: "rf_deep_ensemble"
     params:
       n_estimators: 400
       max_depth: 25
       min_samples_split: 5
       min_samples_leaf: 2
-      max_features: "log2"           # log2(n_features)
+      max_features: "log2"
       bootstrap: true
       max_samples: 0.9
       class_weight: "balanced_subsample"
-      criterion: "entropy"           # Information gain
+      criterion: "entropy"
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+ 
   # REGULARIZED - Prevent Overfitting
-  # =====================================================================
+  
   - name: "rf_regularized"
     params:
       n_estimators: 200
       max_depth: 10
       min_samples_split: 50
       min_samples_leaf: 20
-      max_features: 0.3              # Strong feature selection
+      max_features: 0.3
       bootstrap: true
       max_samples: 0.7
       class_weight: "balanced"
       criterion: "gini"
-      max_leaf_nodes: 100            # Limit tree complexity
+      max_leaf_nodes: 100
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+ 
   # PRODUCTION OPTIMIZED - Speed + Accuracy Balance
-  # =====================================================================
+  
   - name: "rf_production"
     params:
       n_estimators: 150
@@ -102,11 +101,10 @@ experiments:
       random_state: 42
       n_jobs: -1
       warm_start: false
-      oob_score: true                # Out-of-bag validation
-
-  # =====================================================================
+      oob_score: true
+ 
   # EXTREME ENSEMBLE - Maximum Diversity
-  # =====================================================================
+  
   - name: "rf_extreme_ensemble"
     params:
       n_estimators: 500
@@ -118,13 +116,12 @@ experiments:
       max_samples: 0.95
       class_weight: "balanced_subsample"
       criterion: "entropy"
-      min_impurity_decrease: 0.0001  # Pruning threshold
+      min_impurity_decrease: 0.0001
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+ 
   # COST-SENSITIVE - Custom Class Weights
-  # =====================================================================
+ 
   - name: "rf_cost_sensitive"
     params:
       n_estimators: 250
@@ -134,14 +131,13 @@ experiments:
       max_features: "sqrt"
       bootstrap: true
       max_samples: 0.8
-      class_weight: {0: 1, 1: 3}     # Penalize default (1) 3x more
+      class_weight: {0: 1, 1: 3}
       criterion: "gini"
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+ 
   # LIGHTWEIGHT - Fast Inference
-  # =====================================================================
+ 
   - name: "rf_lightweight"
     params:
       n_estimators: 100
@@ -153,20 +149,19 @@ experiments:
       max_samples: 0.75
       class_weight: "balanced"
       criterion: "gini"
-      max_leaf_nodes: 50             # Compact trees
+      max_leaf_nodes: 50
       random_state: 42
       n_jobs: -1
-
-  # =====================================================================
+  
   # EXPERIMENTAL - Grid Search Winner Approximation
-  # =====================================================================
+ 
   - name: "rf_tuned_champion"
     params:
       n_estimators: 350
       max_depth: 22
       min_samples_split: 12
       min_samples_leaf: 6
-      max_features: 0.6              # 60% features
+      max_features: 0.6
       bootstrap: true
       max_samples: 0.85
       class_weight: "balanced_subsample"
